# kafka

./: Cargo.toml  README.md  app.js  db.rs  holidays.js  index.html  kafka.desktop  main.rs  style.css  tauri.conf.json
